<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>

    <string name="main_title">My App Portfolio</string>
    <string name="content_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_my_own_app">CAPSTONE: MY OWN APP</string>
</resources>
